added class of active to the friends nav bar text and to the board nav bar text so that they are given the appropriate color as per the spec to simulate how they would look when user clicks on the nav text. also figured out how to manipulate the popover with .popover and giving a !important at the end of each declaration in order to move the popover down to where it should be according to the spec.

--- a/css/main.css
+++ b/css/main.css
@@ -363,6 +363,15 @@ aside hr {
 
 /* Main content nav bar */
 
+
+/* Class active on nav choices: friends (in page-top nav bar) and board (main content section nav bar)*/
+
+.active {
+  color: #373737;
+}
+
+/* end active class declaration */
+
 .postsNav {
   height: 4em;
 }
@@ -671,8 +680,10 @@ figcaption {
 
 
 /* inbox popover template */
-#popoverTemplate {
 
+.popover {
+  top: 5em!important;
+  max-width: 30em!important;
 }
 .userMessages {
   list-style: none;
