dont remember what I changed on the index.html page but tried to see if putting 100vh on the body for height would alter the bottom of the page but it doesnt. the icons at the top right of the images in the dashboard are slightly off the image which is not supposed to be. dont understand why the images are not rendering on the github pages site.

--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ body {
 #navLinesLeft {
   padding: 10px 20px;
 }
+
 #navLinesRight {
   color: white;
   margin-top: 10px;
@@ -680,7 +681,9 @@ figcaption {
 
 
 /* inbox popover template */
-
+#popoverTemplate:hover{
+  display: list-item;
+}
 .popover {
   top: 6em!important;
   max-width: 30em!important;
